orchestrators/kubernetes/manifests/aqua_csp_009_enforcer/kube_enforcer/003_kube_enforcer_deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: aqua-kube-enforcer
  namespace: aqua
spec:
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: aqua-kube-enforcer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aqua-kube-enforcer
  namespace: aqua
  labels:
    app: aqua-kube-enforcer
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: aqua-kube-enforcer
    spec:
      securityContext:
        runAsUser: 11431
        runAsGroup: 11433
        fsGroup: 11433
      serviceAccountName: aqua-kube-enforcer-sa
      containers:
        - name: kube-enforcer
          image: registry.aquasec.com/kube-enforcer:6.0.preview9
          imagePullPolicy: Always
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          ports:
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: "kube-enforcer-ssl"
              mountPath: "/certs"
      volumes:
        - name: "kube-enforcer-ssl"
          secret:
            secretName: "kube-enforcer-ssl"
            items:
            - key: aqua_ke.crt
              path: aqua_ke.crt
            - key: aqua_ke.key
              path: aqua_ke.key 
      imagePullSecrets:
        - name: aqua-registry
  selector:
    matchLabels:
      app: aqua-kube-enforcer
