orchestrators/kubernetes/manifests/aqua_csp_009_enforcer/kube_enforcer/001_kube_enforcer_config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: kube-enforcer-admission-hook-config
  namespace: aqua
webhooks:
  - name: imageassurance.aquasec.com
    failurePolicy: Ignore
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["pods", "deployments", "replicasets", "replicationcontrollers", "statefulsets", "daemonsets", "jobs", "cronjobs"]
    clientConfig:
      # Please follow instruction in document to generate new CA cert
      caBundle:
      service:
        namespace: aqua
        name: aqua-kube-enforcer
    timeoutSeconds: 5
    admissionReviewVersions: ["v1beta1"]	
    sideEffects: "None"
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: kube-enforcer-me-injection-hook-config
  namespace: aqua
webhooks:
  - name: microenforcer.aquasec.com
    failurePolicy: Ignore
    clientConfig:
      service:
        name: aqua-kube-enforcer
        namespace: aqua
        path: "/mutate"
      caBundle:
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["v1"]
        resources: ["pods"]
    timeoutSeconds: 5
    admissionReviewVersions: ["v1beta1"]	
    sideEffects: "None"
